:sparkles: add necessary API :whale: update docker-compose.yml :memo: fix openapi.yaml
